[package]
name = "lyon_path_rapier2d_collider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_rapier2d = "0.22.0"
lyon_tessellation = "1.0.10"

[dev-dependencies]
bevy_prototype_lyon = "0.9.0"
