[package]
authors = ["PyPylia <me@pypylia.dev>"]
name = "lyon_path_rapier2d_collider"
version = "0.2.0"
description = "Convert Lyon Paths into Bevy_Rapier2d Colliders."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PyPylia/lyon_path_rapier2d_collider"
keywords = ["bevy", "rapier", "lyon", "collider", "2d"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_rapier2d = "0.22.0"
lyon_tessellation = "1.0.10"

[dev-dependencies]
bevy_prototype_lyon = "0.9.0"
